--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yiisoft/yii2-swiftmailer",
+    "name": "eevgbut/yii2-swiftmailer",
     "description": "The SwiftMailer integration for the Yii framework",
     "keywords": ["yii2", "swift", "swiftmailer", "mail", "email", "mailer"],
     "type": "yii2-extension",
@@ -9,7 +9,7 @@
         "forum": "http://www.yiiframework.com/forum/",
         "wiki": "http://www.yiiframework.com/wiki/",
         "irc": "irc://irc.freenode.net/yii",
-        "source": "https://github.com/yiisoft/yii2-swiftmailer"
+        "source": "https://github.com/eevgbut/yii2-swiftmailer/"
     },
     "authors": [
         {
@@ -19,7 +19,7 @@
     ],
     "require": {
         "yiisoft/yii2": ">=2.0.4",
-        "swiftmailer/swiftmailer": "~6.0"
+        "eevgbut/swiftmailer": "dev-master"
     },
     "require-dev": {
         "cweagans/composer-patches": "^1.7",
@@ -29,6 +29,11 @@
         {
             "type": "composer",
             "url": "https://asset-packagist.org"
+        },
+        {
+            "type": "git",
+            "name": "eevgbut/swiftmailer",
+            "url": "https://github.com/eevgbut/swiftmailer.git"
         }
     ],
     "autoload": {
@@ -47,6 +52,12 @@
                 "Fix PHP 7 compatibility": "https://yiisoft.github.io/phpunit-patches/phpunit_php7.patch",
                 "Fix PHP 8 compatibility": "https://yiisoft.github.io/phpunit-patches/phpunit_php8.patch"
             }
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "cweagans/composer-patches": true,
+            "yiisoft/yii2-composer": true
         }
     }
 }
